--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -12,8 +12,10 @@
     @include tablet {
       display: flex;
       justify-content: space-between;
+
+      align-items: center;
       background-color: #f7f8f9b2;
-      padding: 0 1.5rem;
+      padding: 0 2rem;
     }
   }
 
@@ -21,10 +23,14 @@
     display: flex;
     flex-direction: column;
     padding: 0 1.5rem;
+    border-top: solid 1px $secondary-color-2;
 
     @include tablet {
       flex-direction: row;
+      padding: 0 2rem;
       width: 100%;
+      border-top: none;
+      border-bottom: solid $secondary-color-2;
     }
 
     &:hover {
@@ -74,24 +80,19 @@
   &__actions {
     display: flex;
     justify-content: space-between;
-    padding: 1rem 1rem 1.5rem 1rem;
+    padding: 1rem 0rem 1.5rem 0rem;
 
     @include tablet {
       flex-direction: row;
       justify-content: start;
       gap: 1rem;
       margin-right: 0;
+      padding: 1rem;
     }
   }
 }
 
 .cell {
-  @include tablet {
-    flex: 1;
-    padding: 1rem;
-    padding-right: 0;
-  }
-
   &--status {
     @include tablet {
       margin-left: -3rem;
@@ -100,7 +101,7 @@
 
   &--category {
     @include tablet {
-      margin-left: 0;
+      margin-left: 1rem;
     }
   }
 
@@ -149,7 +150,7 @@
 
 .header-cell {
   @include tablet {
-    padding: 1rem;
+    padding: 1rem 0;
     display: flex;
     align-items: flex-start;
   }
@@ -166,11 +167,55 @@
     }
   }
 
+  &--item {
+    @include tablet {
+      padding-right: 1.5rem;
+    }
+    @include desktop {
+      padding-right: 3.5rem;
+    }
+  }
+
+  &--category {
+    @include tablet {
+      margin-left: -1.5rem;
+      padding-right: 1rem;
+    }
+    @include desktop {
+      padding-right: 3.5rem;
+    }
+  }
+
   &--status {
-    margin-left: -0.7rem;
+    @include tablet {
+      margin-left: -1rem;
+      padding-right: 2.5rem;
+    }
+    @include desktop {
+      padding-right: 2.5rem;
+    }
+  }
+
+  &--quantity {
+    @include tablet {
+      margin-left: -1.5rem;
+    }
+    @include desktop {
+      padding-right: 0rem;
+    }
+  }
+
+  &--warehouse {
+    @include tablet {
+      margin-left: -0.5rem;
+    }
+    @include desktop {
+      margin-left: -2rem;
+    }
   }
 }
 
-.inventory-list:last-child > hr:last-child {
-  display: none;
+// doesn't work
+.inventory-list:last-child > border:last-child {
+  border: none;
 }
