--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -228,6 +228,7 @@ a {
   font-size: 0.6875rem;
   line-height: 1rem;
   text-transform: uppercase;
+  text-align: center;
 
   &--out-of-stock {
     background-color: rgba(201, 69, 21, 0.07);
